<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/history_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingBottom="@dimen/sixteen_dp"
            android:paddingLeft="@dimen/sixteen_dp"
            android:paddingTop="@dimen/sixteen_dp"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/sixteen_dp">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/twenty_four_sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:text="@string/address"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/twelve_sp" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:text="@string/opening_hours"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/twelve_sp" />

            <TextView
                android:id="@+id/hours_monday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/hours_tuesday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/hours_wednesday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/hours_thursday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/hours_friday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/hours_saturday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/hours_sunday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:text="@string/phone"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/twelve_sp" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="@dimen/twenty_sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/four_dp"
                android:text="@string/rating"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/twelve_sp" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/eight_dp"
                android:stepSize="0.2" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>