<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/night_background">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:gravity="center"
        android:padding="@dimen/eight_dp"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_four_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Museum" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingBottom="@dimen/four_dp"
        android:text="@string/address"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:paddingBottom="@dimen/four_dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:paddingBottom="@dimen/four_dp"
        android:text="@string/opening_hours"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toStartOf="@+id/address_text"
        app:layout_constraintTop_toBottomOf="@+id/address_text" />

    <TextView
        android:id="@+id/hours_monday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="Monday hours" />

    <TextView
        android:id="@+id/hours_tuesday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_monday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_monday_text"
        tools:text="Tuesday hours" />

    <TextView
        android:id="@+id/hours_wednesday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_tuesday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_tuesday_text"
        tools:text="Wednesday hours" />

    <TextView
        android:id="@+id/hours_thursday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_wednesday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_wednesday_text"
        tools:text="Thursday hours" />

    <TextView
        android:id="@+id/hours_friday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_thursday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_thursday_text"
        tools:text="Friday hours" />

    <TextView
        android:id="@+id/hours_saturday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_friday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_friday_text"
        tools:text="Saturday hours" />

    <TextView
        android:id="@+id/hours_sunday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/four_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_saturday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_saturday_text"
        tools:text="Sunday hours" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:paddingBottom="@dimen/four_dp"
        android:text="@string/phone"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toStartOf="@+id/hours_sunday_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_sunday_text" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:paddingBottom="@dimen/four_dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:paddingBottom="@dimen/four_dp"
        android:text="@string/rating"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintStart_toStartOf="@+id/phone_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_dp"
        android:paddingBottom="@dimen/eight_dp"
        android:stepSize="0.2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:contentDescription="@string/image_of_item"
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/four_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:paddingStart="@dimen/sixteen_dp"
        android:paddingTop="@dimen/sixteen_dp"
        android:paddingEnd="@dimen/sixteen_dp"
        android:paddingBottom="@dimen/sixteen_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        tools:src="@mipmap/ic_launcher" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="0dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>